src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: light) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial Unicode MS, Arial, Helvetica, sans-serif;
}

.pom-pattern {
  background-image: url("/img/pom.webp");
  background-size: 200px 150px;
  opacity: 0.1;
  background-repeat: space repeat;
}

.pom-crust {
  background-image: url("/img/crust.webp");
  background-size: 1170px 810px;
  background-repeat: no-repeat;
  background-position: center;
}

